--- a/style.css
+++ b/style.css
@@ -1,55 +1,52 @@
 *{
     margin: 0;
 }
-nav{
-    height:60px;
-    width: 100vh;
-    display: grid;
-    vertical-align: middle;
-    display: table-cell;
-    background-color: rgb(227, 229, 230);
-}
-.logo{
-   position: relative;
-   left: 8%;
-}
-
 .topnav {
-    background-color: #333;
-    position: relative;
-    height: 100%;
-    
+    background-color: rgb(253, 248, 248);
+    position: absolute;
+    height:70px;
+    width: 100vw;
+    position: fixed;
   }
-  
   .topnav #myLinks {
-    display: none;
+    /* display: none; */
     height:100vh;
+    background-color: #191428;
+    top: 70px;
+    position: relative;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 5fr;
+    align-items: center;
   }
-  
   .icon {
     color: black;
     background-color: white;
-    
     position: absolute;
-    right: 0;
-    top: 0;
-    padding: 14px 16px;
+    right: 20px;
+    top: 15px;
+    padding: 6px 8px;
+    border: solid rgb(37, 36, 36) 1.5px;
   }
-  
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    border: whitesmoke solid 2px;
   }
-  
   .active {
-    background-color: #04AA6D;
+    background-color: #161028;
     color: white;
-    padding: 14px 16px;
-    text-decoration: none;
+    width: 85vw;
+    height: 6vh;
+    margin: 8px 20px;
     font-size: 17px;
+    font-family: 'Roboto Flex', sans-serif;
+    text-decoration: none;
     display: block;
+    text-align: center;
+    position: relative;
+    display: grid;
+    align-items: center;
   }
   .logo-link{
-    position: relative;
+    position: absolute;
+    top: 25px;
     left: 8%;
   }
