--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     position: fixed;
     height:70px;
     width: 100vw;
-    z-index: 3;
+    z-index: 6;
   }
 .topnav #myLinks { 
   height:100vh;
@@ -76,7 +76,7 @@
   justify-items: center;
 }
 .intro-heading{
-  font-size: 48px;
+  font-size: 42px;
   font-weight: 700;
   font-family: 'DM Serif Display', serif;
   color: aliceblue;
@@ -85,17 +85,18 @@
   line-height: 50px;
 }
 .intro-text{
-  font-size: 16px;
+  font-size: 14px;
   font-family: 'Karla', sans-serif;
   text-align: center;
   padding-top: 15px;
   line-height: 28px;
   color: aliceblue;
+  width:275px ;
 }
 .intro-link{
   text-decoration: none;
   margin: 30px 0px 90px 0px;
-  padding: 10px 26px;
+  padding: 10px 22px;
   border: whitesmoke solid 2px;
   color: aliceblue;
   font-family: 'Karla', sans-serif;
@@ -107,4 +108,46 @@
   z-index: 2;
   right: 0px;
   transform: translateY(-150px);
+}
+
+/*features sections*/
+
+.main-feature{
+  background-color: aliceblue;
+  padding-top: 140px;
+  position: relative;
+  display: grid ;
+  justify-items: center;
+}
+.hr{
+  width: 50%;
+  margin-bottom: 30px;
+  justify-self:center ;
+}
+.feature-heading{
+  font-size: 42px;
+  font-weight: 700;
+  font-family: 'DM Serif Display', serif;
+  
+}
+.card-1{
+  display: grid;
+  justify-items: center;
+  margin-top: 70px;
+}
+.card-icon{
+  margin-bottom: 40px;
+}
+.card-heading{
+  font-family: 'Karla', sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.card-text{
+  width: 284px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  color: hsl(273, 4%, 51%);
 }
