--- a/style.css
+++ b/style.css
@@ -13,16 +13,37 @@
     z-index: 6;
   }
 .topnav #myLinks { 
+  background-image: url(./content/images/bg-pattern-mobile-nav.svg);
+  background-repeat: no-repeat;
+  background-position: right 0px bottom 130px;
   height:100vh;
-  background-color:  hsl(270, 9%, 17%);
+  width: 100vw;
   top: 70px;
-  position: absolute;
+  background-color:  hsl(270, 9%, 17%);
   display: grid;
-  grid-template-rows: 60px 60px 60px 60px 1fr;
-  align-items: center;
   justify-items: center;
-  padding-top: 30px;
+  position: absolute;
+  grid-template-rows: 60px 60px 60px 60px;
+  padding-top: 60px;
   display: none;
+}
+.active {
+  background-color:  hsl(270, 9%, 17%);
+  color: aliceblue;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  font-family: 'Roboto Flex', sans-serif;
+  text-align: center;
+  justify-items: center;
+  position: relative;
+  width: fit-content;
+  height: fit-content;
+}
+.active:last-child{
+  padding: 16px 80px;
+  border: whitesmoke solid 2px;
 }
 .icon {
   color: black;
@@ -33,32 +54,10 @@
   padding: 6px 8px;
   border: solid rgb(37, 36, 36) 1.5px;
 }
-.active:hover {
-  border: whitesmoke solid 2px;
-}
-.active {
-  background-color:  hsl(270, 9%, 17%);
-  color: white;
-  width: 85vw;
-  height: 6vh;
-  margin: 0px 20px;
-  font-size: 20px;
-  font-family: 'Roboto Flex', sans-serif;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  position: relative;
-  display: grid;
-  align-items: center;
-}
 .logo-link{
   position: absolute;
   top: 25px;
   left: 8%;
-}
-.mbl-nav-svg{
-  width: 100vw;
-  height: 60%;
 }
 
 /*welcome section*/
@@ -189,6 +188,7 @@
   color: aliceblue;
   font-family: 'Karla', sans-serif;
   font-size: 14px;
+  font-weight: 400;
   letter-spacing: 2px;
 }
 
