--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 .topnav #myLinks { 
   background-image: url(./content/images/bg-pattern-mobile-nav.svg);
   background-repeat: no-repeat;
+  background-size:contain;
   background-position: right 0px bottom 130px;
   height:100vh;
   width: 100vw;
