--- a/style.css
+++ b/style.css
@@ -485,3 +485,94 @@
     justify-items: start;
   }
 }
+
+/*desktop screen*/
+
+@media (min-width:1100px){
+
+  /*navbar*/
+
+  .logo-link{
+    left: 12%;
+  }
+  .topnav #myLinks{
+    margin-left: 56%;
+  }
+
+  /*welcome section*/
+
+  .intro-main{
+    padding:0px 12%;
+  }
+  .intro-img-laptop{
+    right: 12%;
+    top: 180px;
+    z-index: 4;
+    height: auto;
+  }
+  .hr-wel{
+    margin-top: 115px;
+  }
+  .intro-heading{
+    font-size: 80px;
+    line-height: 65px;
+  }
+  .intro-text{
+    width: 535px;
+    padding-top: 2rem;
+  }
+
+  /*features sections*/
+
+  .main-feature{
+    padding: 300px 12% 0px;
+  }
+  .feature-heading{
+    margin-left: 0px;
+    font-size: 65px;
+  }
+  .hr{
+    margin:0px 0% 60px;
+    width: 15%;
+  }
+  .card-main{
+    column-gap: 120px;
+  }
+  .card{
+    justify-items: start;
+    margin: 110px 0px 0px;
+  }
+  .card-text{
+    text-align: left;
+  }
+
+  /*how we work sections*/
+
+  .main-hww{
+    padding: 150px 12%;
+  }
+  .hww-heading{
+    font-size: 60px;
+    width: auto;
+    text-align: start;
+    margin: 50px 150px 0px 110px ;
+  }
+
+  /*contact section*/
+
+  .brand-logo{
+    right:340px;
+  }
+  .contact-icon-main{
+    right: 80px;
+  }
+
+  /*footer section*/
+
+  .footer-main{
+    margin:0px 175px 70px ;
+  }
+  .footer-hr{
+    width: 77%;
+  }
+}
